--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -2,6 +2,7 @@
 @import ./app
 @import ./roboto_font
 @import ../pages/MainPage/ui/MainPage
+@import ../pages/Swiper/ui/Swiper
 @import ../pages/ArticlesPage/ui/ArticlesPage
 @import ../pages/AboutPage/ui/AboutPage
 @import ../widgets/PreLoader/ui/preloader
