--- a/src/css/index.css
+++ b/src/css/index.css
@@ -522,6 +522,235 @@ button {
   top: 10rem;
 }
 
+@font-face {
+  font-family: "Roboto";
+  src: url("./Roboto.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Robotobold";
+  src: url("./Robotobold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Robotothin";
+  src: url("./Robotothin.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Fira";
+  src: url("./Firasansultra.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+:root {
+  --index: calc( 1vw + 1vh );
+}
+
+html {
+  font-size: 62.5%;
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+  background: rgb(34, 34, 34);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+p {
+  font-size: 1.3rem;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-size: 1.2rem;
+}
+
+.fontsize2rem {
+  font-size: 2rem;
+}
+
+.fontsize1rem {
+  font-size: 1.1rem;
+}
+
+.fontsize1-5rem {
+  font-size: 1.5rem;
+}
+
+.colorLight {
+  color: rgb(201, 201, 201);
+}
+
+.white {
+  color: rgb(255, 255, 255);
+}
+
+.taright {
+  text-align: right;
+}
+
+.taleft {
+  text-align: left;
+}
+
+.tacenter {
+  text-align: center;
+}
+
+.tajustify {
+  text-align: justify;
+}
+
+.marginbottom5 {
+  margin-bottom: 5rem;
+}
+
+.marginbottom2 {
+  margin-bottom: 2rem;
+}
+
+.marginbottom3 {
+  margin-bottom: 3rem;
+}
+
+.margin1 {
+  margin: 1rem;
+}
+
+.marginright1 {
+  margin-right: 1rem;
+}
+
+.margin2 {
+  margin: 2rem;
+}
+
+a {
+  color: rgb(148, 154, 156);
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+
+.active {
+  color: #F5F0F1;
+}
+
+.mb1 {
+  margin-bottom: 1rem;
+}
+
+.mb2 {
+  margin-bottom: 2rem;
+}
+
+.upper {
+  text-transform: uppercase;
+}
+
+button {
+  border: none;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+
+.svg {
+  display: flex;
+  min-height: 3rem;
+  max-height: 5rem;
+}
+
+.svgbox {
+  height: 100%;
+  width: 100%;
+}
+
+.absolutecenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.swiperpage {
+  width: calc(100% - 0rem);
+  height: calc(100vh - 6rem);
+  padding: 1rem;
+}
+.swiperpage__content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.swiperpage__swiperbox {
+  width: 100%;
+  height: 100%;
+}
+@media (max-width: 720px) {
+  .swiperpage__swiperbox {
+    height: -moz-max-content;
+    height: max-content;
+  }
+}
+.swiperpage__item {
+  width: 80vw;
+  height: 70vh;
+}
+.swiperpage__box {
+  display: flex;
+}
+.swiperpage__picbox {
+  height: 100%;
+  width: 100%;
+}
+@media (max-width: 720px) {
+  .swiperpage__picbox {
+    width: 100%;
+    height: auto;
+  }
+}
+.swiperpage__pic {
+  height: 100%;
+  width: auto;
+}
+@media (max-width: 720px) {
+  .swiperpage__pic {
+    height: auto;
+    width: 100%;
+  }
+}
+
+.swiper-wrapper {
+  height: 100%;
+  align-items: center;
+}
+@media (max-width: 720px) {
+  .swiper-wrapper {
+    height: none;
+    align-items: center;
+  }
+}
+
 .articles {
   width: calc(100% - 0rem);
   height: calc(100vh - 5rem);
