--- a/src/css/index.css
+++ b/src/css/index.css
@@ -76,6 +76,10 @@ h4 {
   color: rgb(201, 201, 201);
 }
 
+.colorGreen {
+  color: #00998c;
+}
+
 .white {
   color: rgb(255, 255, 255);
 }
@@ -118,6 +122,10 @@ h4 {
 
 .margin2 {
   margin: 2rem;
+}
+
+.margin2left {
+  margin-left: 2rem;
 }
 
 a {
@@ -244,6 +252,10 @@ h4 {
   color: rgb(201, 201, 201);
 }
 
+.colorGreen {
+  color: #00998c;
+}
+
 .white {
   color: rgb(255, 255, 255);
 }
@@ -286,6 +298,10 @@ h4 {
 
 .margin2 {
   margin: 2rem;
+}
+
+.margin2left {
+  margin-left: 2rem;
 }
 
 a {
@@ -600,6 +616,10 @@ h4 {
   color: rgb(201, 201, 201);
 }
 
+.colorGreen {
+  color: #00998c;
+}
+
 .white {
   color: rgb(255, 255, 255);
 }
@@ -642,6 +662,10 @@ h4 {
 
 .margin2 {
   margin: 2rem;
+}
+
+.margin2left {
+  margin-left: 2rem;
 }
 
 a {
@@ -714,7 +738,12 @@ button {
 }
 .swiperpage__item {
   width: 80vw;
-  height: 70vh;
+  padding: 2rem;
+}
+@media (max-width: 720px) {
+  .swiperpage__item {
+    padding: 0;
+  }
 }
 .swiperpage__box {
   display: flex;
@@ -900,6 +929,10 @@ h4 {
   color: rgb(201, 201, 201);
 }
 
+.colorGreen {
+  color: #00998c;
+}
+
 .white {
   color: rgb(255, 255, 255);
 }
@@ -942,6 +975,10 @@ h4 {
 
 .margin2 {
   margin: 2rem;
+}
+
+.margin2left {
+  margin-left: 2rem;
 }
 
 a {
@@ -1206,7 +1243,7 @@ button {
 }
 .sidebar__linkbox {
   width: 100%;
-  height: 20rem;
+  height: 25rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -1260,4 +1297,198 @@ button {
 .sidebarhidden {
   left: -1rem;
   transition: all 0.4s;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("./Roboto.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Robotobold";
+  src: url("./Robotobold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Robotothin";
+  src: url("./Robotothin.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Fira";
+  src: url("./Firasansultra.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+:root {
+  --index: calc( 1vw + 1vh );
+}
+
+html {
+  font-size: 62.5%;
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+  background: rgb(34, 34, 34);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+p {
+  font-size: 1.3rem;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-size: 1.2rem;
+}
+
+.fontsize2rem {
+  font-size: 2rem;
+}
+
+.fontsize1rem {
+  font-size: 1.1rem;
+}
+
+.fontsize1-5rem {
+  font-size: 1.5rem;
+}
+
+.colorLight {
+  color: rgb(201, 201, 201);
+}
+
+.colorGreen {
+  color: #00998c;
+}
+
+.white {
+  color: rgb(255, 255, 255);
+}
+
+.taright {
+  text-align: right;
+}
+
+.taleft {
+  text-align: left;
+}
+
+.tacenter {
+  text-align: center;
+}
+
+.tajustify {
+  text-align: justify;
+}
+
+.marginbottom5 {
+  margin-bottom: 5rem;
+}
+
+.marginbottom2 {
+  margin-bottom: 2rem;
+}
+
+.marginbottom3 {
+  margin-bottom: 3rem;
+}
+
+.margin1 {
+  margin: 1rem;
+}
+
+.marginright1 {
+  margin-right: 1rem;
+}
+
+.margin2 {
+  margin: 2rem;
+}
+
+.margin2left {
+  margin-left: 2rem;
+}
+
+a {
+  color: rgb(148, 154, 156);
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+
+.active {
+  color: #F5F0F1;
+}
+
+.mb1 {
+  margin-bottom: 1rem;
+}
+
+.mb2 {
+  margin-bottom: 2rem;
+}
+
+.upper {
+  text-transform: uppercase;
+}
+
+button {
+  border: none;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+
+.svg {
+  display: flex;
+  min-height: 3rem;
+  max-height: 5rem;
+}
+
+.svgbox {
+  height: 100%;
+  width: 100%;
+}
+
+.absolutecenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.bigpic {
+  width: calc(100% - 0rem);
+  height: calc(100vh - 5rem);
+  padding: 1rem;
+  position: relative;
+  overflow: auto;
+}
+.bigpic__picbox {
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  transform: translate(0%, -50%);
+  height: 90%;
+}
+.bigpic__pic {
+  height: 100%;
 }/*# sourceMappingURL=index.css.map */
