--- a/src/pages/Swiper/ui/Swiper.sass
+++ b/src/pages/Swiper/ui/Swiper.sass
@@ -19,7 +19,10 @@
 
     &__item
         width: 80vw
-        height: 70vh
+        // height: 70vh
+        padding: 2rem
+        @media (max-width: 720px)
+            padding: 0
     &__box
         display: flex
 
