--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -11,6 +11,7 @@
 @import ../widgets/not_found/ui/notfound
 @import ../widgets/navbar/ui/navbar
 @import ../widgets/sidebar/ui/sidebar
+@import ../widgets/bigpic/ui/bigpic
 
 
 
