--- a/src/css/AboutPage.css
+++ b/src/css/AboutPage.css
@@ -76,6 +76,10 @@ h4 {
   color: rgb(201, 201, 201);
 }
 
+.colorGreen {
+  color: #00998c;
+}
+
 .white {
   color: rgb(255, 255, 255);
 }
@@ -118,6 +122,10 @@ h4 {
 
 .margin2 {
   margin: 2rem;
+}
+
+.margin2left {
+  margin-left: 2rem;
 }
 
 a {
