--- a/src/css/Swiper.css
+++ b/src/css/Swiper.css
@@ -76,6 +76,10 @@ h4 {
   color: rgb(201, 201, 201);
 }
 
+.colorGreen {
+  color: #00998c;
+}
+
 .white {
   color: rgb(255, 255, 255);
 }
@@ -118,6 +122,10 @@ h4 {
 
 .margin2 {
   margin: 2rem;
+}
+
+.margin2left {
+  margin-left: 2rem;
 }
 
 a {
@@ -190,7 +198,12 @@ button {
 }
 .swiperpage__item {
   width: 80vw;
-  height: 70vh;
+  padding: 2rem;
+}
+@media (max-width: 720px) {
+  .swiperpage__item {
+    padding: 0;
+  }
 }
 .swiperpage__box {
   display: flex;
