--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -22,6 +22,7 @@
     
 $colorMain: rgb(34, 34, 34)
 $colorLight: rgb(201, 201, 201)
+$colorGreen:#00998c
 $colorDeepLight: rgb(148, 154, 156)
 $colorDark: rgb(9, 11, 14)
 
@@ -72,7 +73,8 @@ h4
 
 .colorLight
     color: $colorLight
-
+.colorGreen
+    color: $colorGreen
 
 
 .white
@@ -97,6 +99,8 @@ h4
     margin-right: 1rem
 .margin2
     margin: 2rem
+.margin2left
+    margin-left: 2rem
 a  
     color: $colorDeepLight 
     text-decoration: none
