--- a/src/css/Swiper.css
+++ b/src/css/Swiper.css
@@ -174,9 +174,27 @@ button {
   transform: translate(-50%, -50%);
 }
 
+.cyrillicextrabold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.cyrillicbold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.cyrillicsamibold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
 .swiperpage {
   width: calc(100% - 0rem);
-  height: calc(100vh - 6rem);
+  height: calc(100vh - 7rem);
   padding: 1rem;
 }
 .swiperpage__content {
