--- a/src/css/app.css
+++ b/src/css/app.css
@@ -174,6 +174,24 @@ button {
   transform: translate(-50%, -50%);
 }
 
+.cyrillicextrabold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.cyrillicbold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.cyrillicsamibold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
 .app {
   font: 1.6rem;
   width: 100%;
