--- a/src/css/bigpic.css
+++ b/src/css/bigpic.css
@@ -174,6 +174,24 @@ button {
   transform: translate(-50%, -50%);
 }
 
+.cyrillicextrabold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.cyrillicbold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.cyrillicsamibold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
 .bigpic {
   width: calc(100% - 0rem);
   height: calc(100vh - 5rem);
@@ -184,9 +202,15 @@ button {
 .bigpic__picbox {
   position: absolute;
   top: 50%;
-  left: 5%;
-  transform: translate(0%, -50%);
+  left: 50%;
+  transform: translate(-50%, -50%);
   height: 90%;
+}
+@media (max-width: 700px) {
+  .bigpic__picbox {
+    left: 5%;
+    transform: translate(0%, -50%);
+  }
 }
 .bigpic__pic {
   height: 100%;
