--- a/src/css/index.css
+++ b/src/css/index.css
@@ -174,6 +174,24 @@ button {
   transform: translate(-50%, -50%);
 }
 
+.cyrillicextrabold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.cyrillicbold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.cyrillicsamibold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
 @font-face {
   font-family: "Roboto";
   src: url("./Roboto.ttf") format("truetype");
@@ -350,6 +368,24 @@ button {
   transform: translate(-50%, -50%);
 }
 
+.cyrillicextrabold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.cyrillicbold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.cyrillicsamibold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
 .app {
   font: 1.6rem;
   width: 100%;
@@ -501,7 +537,7 @@ button {
 
 .mainpage {
   width: calc(100% - 0rem);
-  height: calc(100vh - 5rem);
+  height: calc(100vh - 7rem);
   padding: 1rem;
   display: flex;
   justify-content: center;
@@ -517,12 +553,75 @@ button {
   justify-content: space-between;
 }
 .mainpage__header {
-  color: rgb(201, 201, 201);
+  background: rgb(201, 201, 201);
+  animation: anime 3s linear 0s;
+  -webkit-background-clip: text;
+          background-clip: text;
+  color: transparent;
+  backface-visibility: hidden;
   font-size: calc(var(--index) * 7);
   font-family: "Rowdies", sans-serif, "Robotobold";
   font-weight: 600;
   font-style: normal;
   line-height: calc(var(--index) * 6);
+  transition: All 0.5s;
+}
+@keyframes anime {
+  0% {
+    transition: All 0.5s;
+    background: #222222;
+    opacity: 0;
+    -webkit-background-clip: text;
+            background-clip: text;
+    color: transparent;
+    backface-visibility: hidden;
+  }
+  20% {
+    transition: All 0.5s;
+    background: #222222;
+    opacity: 0.2;
+    -webkit-background-clip: text;
+            background-clip: text;
+    color: transparent;
+    text-shadow: 0px 0px 200px #ffffff;
+    backface-visibility: hidden;
+  }
+  40% {
+    transition: All 0.5s;
+    background: #222222;
+    opacity: 0.4;
+    -webkit-background-clip: text;
+            background-clip: text;
+    color: transparent;
+    backface-visibility: hidden;
+  }
+  60% {
+    transition: All 0.5s;
+    background: #555555;
+    opacity: 0.6;
+    -webkit-background-clip: text;
+            background-clip: text;
+    color: transparent;
+    backface-visibility: hidden;
+  }
+  80% {
+    transition: All 0.5s;
+    background: #727272;
+    -webkit-background-clip: text;
+            background-clip: text;
+    opacity: 0.8;
+    color: transparent;
+    backface-visibility: hidden;
+  }
+  100% {
+    transition: All 0.5s;
+    background: rgb(201, 201, 201);
+    -webkit-background-clip: text;
+            background-clip: text;
+    opacity: 1;
+    color: transparent;
+    backface-visibility: hidden;
+  }
 }
 @media (max-width: 430px) {
   .mainpage__header {
@@ -714,9 +813,27 @@ button {
   transform: translate(-50%, -50%);
 }
 
+.cyrillicextrabold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.cyrillicbold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.cyrillicsamibold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
 .swiperpage {
   width: calc(100% - 0rem);
-  height: calc(100vh - 6rem);
+  height: calc(100vh - 7rem);
   padding: 1rem;
 }
 .swiperpage__content {
@@ -782,7 +899,7 @@ button {
 
 .articles {
   width: calc(100% - 0rem);
-  height: calc(100vh - 5rem);
+  height: calc(100vh - 7rem);
   padding: 1rem;
   overflow: hidden;
 }
@@ -1027,9 +1144,27 @@ button {
   transform: translate(-50%, -50%);
 }
 
+.cyrillicextrabold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.cyrillicbold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.cyrillicsamibold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
 .about {
   width: calc(100% - 0rem);
-  height: calc(100vh - 5rem);
+  height: calc(100vh - 7rem);
   padding: 1rem;
   display: flex;
   justify-content: center;
@@ -1220,10 +1355,13 @@ button {
   color: rgb(148, 154, 156);
   font-size: 1.2rem;
 }
+.navbar__img {
+  width: 22px;
+}
 
 .sidebar {
   width: 20rem;
-  height: calc(100vh - 5rem);
+  height: calc(100vh - 10rem);
   position: absolute;
   top: 5rem;
   left: -19rem;
@@ -1233,6 +1371,7 @@ button {
   padding: 0.5rem;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   z-index: 3;
 }
 @media (max-width: 700px) {
@@ -1255,8 +1394,8 @@ button {
   text-align: left;
 }
 .sidebar__linkbox__link:hover {
-  scale: 105%;
-  transition: all 0.3s;
+  scale: 103%;
+  transition: all 0.2s;
 }
 .sidebar__hiddenbtn {
   background: none;
@@ -1475,6 +1614,24 @@ button {
   transform: translate(-50%, -50%);
 }
 
+.cyrillicextrabold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.cyrillicbold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.cyrillicsamibold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
 .bigpic {
   width: calc(100% - 0rem);
   height: calc(100vh - 5rem);
@@ -1485,9 +1642,15 @@ button {
 .bigpic__picbox {
   position: absolute;
   top: 50%;
-  left: 5%;
-  transform: translate(0%, -50%);
+  left: 50%;
+  transform: translate(-50%, -50%);
   height: 90%;
+}
+@media (max-width: 700px) {
+  .bigpic__picbox {
+    left: 5%;
+    transform: translate(0%, -50%);
+  }
 }
 .bigpic__pic {
   height: 100%;
