--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -134,5 +134,17 @@ button
     top: 50%
     left: 50%
     transform: translate(-50%, -50%)
+.cyrillicextrabold
+    font-family: "Montserrat Alternates", sans-serif
+    font-weight: 800
+    font-style: normal
+.cyrillicbold
+    font-family: "Montserrat Alternates", sans-serif
+    font-weight: 600
+    font-style: normal
+.cyrillicsamibold
+    font-family: "Montserrat Alternates", sans-serif
+    font-weight: 300
+    font-style: normal
 
 
