--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -36,7 +36,6 @@ $COLMAIN: #811300
 $COLSECOND: #F5F0F1
 $COLACCENT: #2E0015
 
-
 :root
     --index: calc( 1vw + 1vh )
 
@@ -146,5 +145,8 @@ button
     font-family: "Montserrat Alternates", sans-serif
     font-weight: 300
     font-style: normal
-
+.flex
+    display: flex
+    align-items: center
+    justify-content: center
 
