--- a/src/css/app.css
+++ b/src/css/app.css
@@ -192,6 +192,12 @@ button {
   font-style: normal;
 }
 
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .app {
   font: 1.6rem;
   width: 100%;
